# ragz

./: .gitignore  README.md  activate.sh  check-openai-usage.sh  docker-compose.yml  rag-workflow.json  requirements.txt  start.sh  test-openai-model.sh
.devcontainer/: devcontainer.json
data-fetch/: .replit  Crypto-list.xlsx  README.md  REPLIT_SETUP.md  app.py  env.example  packages.txt  replit.nix  (+2 more)
rag-assist/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
rag-assist/notebooks/: image_extraction_demo.ipynb
rag-assist/scripts/: localstack-init.sh  seed_data.py
rag-assist/src/rag_assist/: __init__.py
rag-assist/src/rag_assist/agent/: __init__.py  learning_agent.py
rag-assist/src/rag_assist/agent/guardrails/: __init__.py  bedrock_guardrails.py  guardrail_orchestrator.py  policy_gate.py
rag-assist/src/rag_assist/agent/tools/: __init__.py  citation_tool.py  retrieval_tool.py  scope_checker.py
rag-assist/src/rag_assist/api/: __init__.py  main.py
rag-assist/src/rag_assist/api/models/: __init__.py  request_models.py  response_models.py
rag-assist/src/rag_assist/config/: __init__.py  aws_config.py  opensearch_config.py  settings.py
rag-assist/src/rag_assist/ingestion/: __init__.py  models.py
rag-assist/src/rag_assist/ingestion/chunking/: __init__.py  base_chunker.py  chunker_factory.py  docx_chunker.py  pdf_chunker.py  pptx_chunker.py
rag-assist/src/rag_assist/ingestion/deduplication/: __init__.py  dedup_manager.py  hash_dedup.py  semantic_dedup.py
rag-assist/src/rag_assist/ingestion/images/: PLAN.md  __init__.py  content_indexer.py  content_retriever.py  embedders.py  models.py  pdf_content_extractor.py  ppt_extraction_demo.ipynb  ppt_text_extractor.py  pptx_image_extractor.py  s3_store.py  text_deduplicator.py
rag-assist/src/rag_assist/ingestion/metadata/: __init__.py  entity_extractor.py  extractor.py  keyword_extractor.py  topic_classifier.py
rag-assist/src/rag_assist/ingestion/parsers/: __init__.py  base_parser.py  docx_parser.py  parser_factory.py  pdf_parser.py  pptx_parser.py
rag-assist/src/rag_assist/vectorstore/: __init__.py  embedder.py  hybrid_search.py  indexer.py  opensearch_client.py
rag-assist/tests/: __init__.py  conftest.py
rag-assist/tests/smoke/: __init__.py  test_smoke.py
rag-assist/tests/unit/: __init__.py  test_chunking.py  test_deduplication.py  test_guardrails.py
(+100 files in other folders)
